test/parsing/ferguson/reserved-int.chpl
var int = 0;

proc f(int) {
}

class int {
  var int =0;
}

type int = real;
